after 0.92:
	Fix the failure on Solaris via aliasing shifts() to pari_shifts()
	(was dynalinking with libnls instead).
after 0.93:
	Updated for newer Term::Gnuplot.

after 0.94:
	Updated for v 2.0.11-beta of PARI.
	One needs to manually copy paricfg.h from pari distribution
		to libPARI directory.
	Processor recognition is on level of 2.0.5-alpha.
	sparcs on linux/nextstep not supported.
	hppa cannot build dynamically, use machine=port instead in
		Makefile.PL line.
after 0.95_00:
	Approximately half of subtests are passed now (229 skip, 337 fail
		out of 782).
	Some more patches to PARI are required (in ./patches).
	Still needs to be built as a subdirectory of the root of PARI tree.
after 0.95_01:
	Tests and paricfg.h are autocopied (but paricfg.h should be
	created first by toplevel configure script!).
	Skip compatibility tests.
	Circa 80% of non-skipped tests is OK (110 fail, 764 skipped
		out of 1381).
	Look for PARI build directory nearby.
	Autogenerate libPARI.pod.
after 0.95_02:
	Tag :prec=digits allowed.
	Overloaded << and >> (in Perl, not XS).
	Hex and octal conversion on _hex_cvt.
	Untested overloaded constants, on :int, :float, :hex import tags.
	Output of doubles explained.
	Flexible interface implemented (with runtime-parsing of
		signature, will not work if sizeof's char*, GEN, long 
		are different.)
		85% pass (366 skipped, 146 fail out of 1381).
			(nfields: some actually-wrong answers?)
after 0.95_03:
	Prototype for flexible-interface functions was wrong.
	Only type()/sumalt()/prodinf()/plot*() are special-cased in
		tests now (in addition to what was in 1.39).
	Better massage of matrix output, use RE to process pari output.
	undef allowed as a value of an optional argument.
	Minor massage of codes to move 'l' and 'v' forward.
	setseriesprecision() implemented.
	sv2pari() was not calling mg_get().

All tests successful, 1 test skipped, plus 156 subtests skipped.
Files=17,  Tests=1393, 204 secs ( 0.00 cusr  0.00 csys =  0.00 cpu)